New gradlew build init

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,9 @@ version = '0.1.0'
 group = 'com.behamotten'
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(21)
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
     withSourcesJar()
 }
 
