--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,21 @@ sourceSets {
     main {
         compileClasspath += sourceSets.stubs.output
     }
+    test {
+        compileClasspath += sourceSets.stubs.output
+        runtimeClasspath += sourceSets.stubs.output
+    }
 }
 
 dependencies {
     compileOnly sourceSets.stubs.output
+}
+
+tasks.register('runTests', JavaExec) { task ->
+    task.group = 'verification'
+    task.description = 'Runs the custom unit tests without requiring external dependencies.'
+    task.classpath = sourceSets.test.runtimeClasspath
+    task.mainClass = 'com.behamotten.events.AllTests'
 }
 
 def taskContainer = tasks
