--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,29 @@ dependencies {
 
 def taskContainer = tasks
 
+def configureJavaExecMainClass = { JavaExec execTask, String mainClassName ->
+    if (execTask.metaClass.respondsTo(execTask, 'setMainClass', Object)) {
+        execTask.setMainClass(mainClassName)
+        return
+    }
+
+    if (execTask.metaClass.hasProperty(execTask, 'mainClass')) {
+        def mainClassProperty = execTask.mainClass
+        if (mainClassProperty?.metaClass?.respondsTo(mainClassProperty, 'set', Object)) {
+            mainClassProperty.set(mainClassName)
+        } else {
+            execTask.mainClass = mainClassName
+        }
+        return
+    }
+
+    if (execTask.metaClass.respondsTo(execTask, 'setMain', Object)) {
+        execTask.setMain(mainClassName)
+    } else {
+        execTask.main = mainClassName
+    }
+}
+
 if (taskContainer.metaClass.respondsTo(taskContainer, 'register', Object[])) {
     def runTestsProvider = taskContainer.register('runTests', JavaExec)
     if (runTestsProvider.metaClass.respondsTo(runTestsProvider, 'configure', Closure)) {
@@ -68,7 +91,7 @@ if (taskContainer.metaClass.respondsTo(taskContainer, 'register', Object[])) {
             task.group = 'verification'
             task.description = 'Runs the custom unit tests without requiring external dependencies.'
             task.classpath = sourceSets.test.runtimeClasspath
-            task.mainClass = 'com.behamotten.events.AllTests'
+            configureJavaExecMainClass(task, 'com.behamotten.events.AllTests')
         }
     } else if (runTestsProvider.metaClass.respondsTo(runTestsProvider, 'get')) {
         def task = runTestsProvider.get()
@@ -76,7 +99,7 @@ if (taskContainer.metaClass.respondsTo(taskContainer, 'register', Object[])) {
             task.group = 'verification'
             task.description = 'Runs the custom unit tests without requiring external dependencies.'
             task.classpath = sourceSets.test.runtimeClasspath
-            task.mainClass = 'com.behamotten.events.AllTests'
+            configureJavaExecMainClass(task, 'com.behamotten.events.AllTests')
         }
     }
 } else {
@@ -84,7 +107,7 @@ if (taskContainer.metaClass.respondsTo(taskContainer, 'register', Object[])) {
         task.group = 'verification'
         task.description = 'Runs the custom unit tests without requiring external dependencies.'
         task.classpath = sourceSets.test.runtimeClasspath
-        task.mainClass = 'com.behamotten.events.AllTests'
+        configureJavaExecMainClass(task, 'com.behamotten.events.AllTests')
     }
 }
 
